# Saleh.im

./: .gitignore  LICENSE  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
.github/workflows/: deploy.yml
app/: globals.css  layout.tsx  page.tsx  sitemap.ts
app/aperture/: boards.ts  layout.tsx  lib.ts  page.tsx  panels.tsx  presets.ts  types.ts
app/download/: page.tsx
app/forge/: layout.tsx  page.tsx  tools2.tsx
app/lumen/: page.tsx
app/messenger/: page.tsx
app/nota/: layout.tsx  page.tsx
app/prism/: layout.tsx  page.tsx
app/probe/: page.tsx
app/pulse/: layout.tsx  page.tsx
app/relay/: layout.tsx  page.tsx
app/rift/: layout.tsx  page.tsx
app/vanguard/: layout.tsx  page.tsx
app/vault/: page.tsx
components/: about.tsx  certificates.tsx  contact.tsx  cursor-glow.tsx  electronics.tsx  experience.tsx  footer.tsx  hero.tsx  ip-tool.tsx  logo.tsx  navbar.tsx  preloader.tsx  projects.tsx  reveal.tsx  showcase.tsx  skills.tsx  terminal.tsx  theme-toggle.tsx
components/vault/: ui.tsx
desktop/: CMakeLists.txt  README.md  build.sh  main.js  package.json  preload.js
desktop/src/: browserimport.cpp  browserimport.hpp  dialogs.cpp  dialogs.hpp  effects.hpp  extradialogs.cpp  extradialogs.hpp  livemonitor.cpp  livemonitor.hpp  mainwindow.cpp  mainwindow.hpp  smoketest.cpp  theme.hpp  vault.cpp  vault.hpp
extension/: README.md  background.js  bridge.js  content.js  manifest.json  popup.css  popup.html  popup.js
functions/api/: ip.ts
lib/: data.ts  i18n.ts  themes.ts
lib/forge/: logic2.ts  netsec2.ts
lib/rift/: abilities.ts  audio.ts  challenges.ts  codex.ts  enemies.ts  engine.ts  fa.ts  heroes.ts  meta.ts  weapons.ts
lib/vanguard/: ai.ts  audio.ts  engine.ts  maps.ts  net.ts  viewmodels.ts  weapons.ts
lib/vault/: crypto.ts  extension-bridge.ts  store.ts
public/: sw.js
public/apps/messenger/: app.js  index.html  style.css
public/apps/secret-chat/: app.js  crypto.js  index.html  style.css
